* *PostgreSQL 10 or higher*: Horizon 29 requires any supported version of PostgreSQL from 10 up to (and including) 14.

== Breaking Changes

=== Running as Non-Root

By default, OpenNMS now runs as the `opennms` user rather than `root`.

WARNING: If you are upgrading from a version of OpenNMS Horizon older than 29, you will have to fix the ownership of your files.

==== Fixing Permissions and Ownership

Since many OpenNMS instances are very large with thousands or even millions of RRD and similar data files in `$OPENNMS_HOME/share`,
we decided _not_ to change ownership automatically upon package upgrade.

The OpenNMS installer will detect if you need to fix the ownership of your files and warn you to run the script to fix permissions
(`$OPENNMS_HOME/bin/fix-permissions`) in this case.

If you wish to revert to the previous behavior, create an `$OPENNMS_HOME/etc/opennms.conf` file if it doesn't already exist, and set `RUNAS`.

[source, shell]
----
RUNAS=root
----

Change the user to `root` in the systemd unit by editing the systemd unit file.

[source, shell]
----
systemctl edit opennms
----

.Add the following content
[source, shell]
----
[Service]
User=root
----

Save the file and reload systemd with `systemctl daemon-reload` and restart OpenNMS with `systemctl restart opennms`.
The OpenNMS process should run as root user instead of `opennms` and can be verified with `ps -aux | grep java`.

==== Trapd Port Changes

As OpenNMS can no longer listen on privileged ports by default, the default Trapd port is now `10162`.
You will need to configure a proxy agent or port forward to continue to receive traps at port `162`.
Otherwise, you must configure your agents to send traps to the new port instead.

==== Java ICMP Permissions

OpenNMS will attempt to configure ICMP permissions using the `net.ipv4.ping_group_range` sysctl.
However, Linux kernels older than version 3.11 (like the version provided by CentOS 7) do not support this setting fully.
