@@ -163,8 +163,8 @@ karaf.secured.services = (&(osgi.command.scope=*)(osgi.command.function=*))
 # the karaf.lock.slave.block property (false by default):
 # karaf.lock.slave.block=true
 
-# OPENNMS: Enable SNMP4J Log4j logging
-snmp4j.LogFactory=org.snmp4j.log.Log4jLogFactory
+# OPENNMS: Enable SNMP4J SLF4J logging
+snmp4j.LogFactory=org.opennms.netmgt.snmp.snmp4j.Slf4jLogFactory
 
 # OPENNMS: Disable SIGTERM in karaf as OpenNMS should handle SIGTERM.
 karaf.handle.sigterm = false
